--- a/basic/style5.css
+++ b/basic/style5.css
@@ -40,24 +40,71 @@ header .flexbox{
   text-decoration: none;
 }
 
-.header-content{
-  padding: 100px 300px;
+.lead-form{
+  text-align: center;
+  font-size: 20px;
 }
-.content-box input{
-  background-color: rgb(202, 202, 202);
+
+form{
+  width: 460px;
+  margin: 0 auto;
 }
-.content-box textarea{
-  background-color: rgb(202, 202, 202);
-  width: 500px;
-  height: 100px;
+
+.item{
+  overflow: hidden;
+  margin-bottom: 20px;
 }
-.content-box input:hover{
-  background-color: black;
-  opacity: 0.1;
+
+.label{
+  float: left;
+  margin-right: 20px;
+  width: 135px;
+  border-left: solid 3px gray;
+  padding-left: 10px;
 }
-textarea:hover{
-  background-color: black;
-  opacity: 0.2;
+
+.inputs{
+  float: left;
+  width: 300px;
+}
+
+input[type="text"],input[type="email"]{
+  border: solid 1px #aaa;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 15px;
+}
+
+.textarea{
+  border: solid 1px #aaa;
+  border-radius: 5px;
+  padding: 10px;
+  height: 160px;
+  font-size: 15px;
+}
+
+.btn-area{
+  text-align: center;
+}
+
+.input[type="submit"]{
+  background: gray;
+  border: none;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin: 0 5px;
+}
+
+input[type="reset"]{
+  background: gray;
+  border: none;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin: 0 5px;
 }
 
 
