--- a/basic/style.css
+++ b/basic/style.css
@@ -40,6 +40,14 @@ header .flexbox{
   text-decoration: none;
 }
 
+nav span{
+  background: #000;
+  height: 2px;
+  display: block;
+  position: absolute;
+  left: 0;  
+}
+
 .about{
   max-width: 100%;
   text-align: center;
