--- a/basic/style5.css
+++ b/basic/style5.css
@@ -40,6 +40,14 @@ header .flexbox{
   text-decoration: none;
 }
 
+nav span{
+  background: #000;
+  height: 2px;
+  display: block;
+  position: absolute;
+  left: 0;  
+}
+
 .lead-form{
   text-align: center;
   font-size: 20px;
