--- a/basic/style2.css
+++ b/basic/style2.css
@@ -74,9 +74,29 @@ nav span{
   padding: 100px 5px 0px 100px;
 }
 
+.c-marker{
+  background: -webkit-linear-gradient(left, #DEB887 50%, transparent 50%);
+  background: -moz-linear-gradient(left,#DEB887 50%, transparent 50%);
+  background: linear-gradient(left, #DEB887  50%, transparent 50%);
+  background-repeat: no-repeat;
+  background-size: 200% .8em;
+  background-position: 100% .5em;
+  transition: 2s;
+}
+
+.c-marker.is-active{
+  background-position: 0% .5em;
+}
+
+
 
 footer{
   width: 100%;
   height: 120px;
   text-align: center;
+}
+
+.footer-text{
+  padding-top: 100px;
+  padding-bottom: 50px;
 }
