--- a/basic/style4.css
+++ b/basic/style4.css
@@ -76,6 +76,19 @@ nav span{
   padding: 100px 5px 0px 100px;
 }
 
+.c-marker{
+  background: -webkit-linear-gradient(left,  #5F9EA0 50%, transparent 50%);
+  background: -moz-linear-gradient(left, #5F9EA0  50%, transparent 50%);
+  background: linear-gradient(left, #5F9EA0  50%, transparent 50%);
+  background-repeat: no-repeat;
+  background-size: 200% .8em;
+  background-position: 100% .5em;
+  transition: 2s;
+}
+
+.c-marker.is-active{
+  background-position: 0% .5em;
+}
 
 footer{
   width: 100%;
