--- a/basic/style5.css
+++ b/basic/style5.css
@@ -48,72 +48,32 @@ nav span{
   left: 0;  
 }
 
-.lead-form{
+
+.contact-title{
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
+  padding-top: 100px;
 }
 
-form{
-  width: 460px;
-  margin: 0 auto;
+.form{
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  font-size: 1.1em;
+  padding: 100px 300px;
 }
 
-.item{
-  overflow: hidden;
-  margin-bottom: 20px;
+.contact-box input{
+  background-color: rgb(202, 202, 202);
+}
+.contact-box textarea{
+  background-color: rgb(202, 202, 202);
+  width: 500px;
+  height: 100px;
 }
 
-.label{
-  float: left;
-  margin-right: 20px;
-  width: 135px;
-  border-left: solid 3px gray;
-  padding-left: 10px;
-}
 
-.inputs{
-  float: left;
-  width: 300px;
-}
 
-input[type="text"],input[type="email"]{
-  border: solid 1px #aaa;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 15px;
-}
-
-.textarea{
-  border: solid 1px #aaa;
-  border-radius: 5px;
-  padding: 10px;
-  height: 160px;
-  font-size: 15px;
-}
-
-.btn-area{
-  text-align: center;
-}
-
-.input[type="submit"]{
-  background: gray;
-  border: none;
-  color: white;
-  font-size: 17px;
-  font-weight: bold;
-  padding: 10px 20px;
-  margin: 0 5px;
-}
-
-input[type="reset"]{
-  background: gray;
-  border: none;
-  color: white;
-  font-size: 17px;
-  font-weight: bold;
-  padding: 10px 20px;
-  margin: 0 5px;
-}
 
 
 
